RESOLVED FIXED13501
REGRESSION (r21093): Pasting into text field fails and makes the caret disappear
https://bugs.webkit.org/show_bug.cgi?id=13501
Summary REGRESSION (r21093): Pasting into text field fails and makes the caret disappear
mitz
Reported 2007-04-26 08:27:15 PDT
To reproduce the bug, open the URL, copy some text to the clipboard, focus the text field and press Command-V. Instead of the text being pasted into the field, the caret disappears. Blurring and refocusing the field doesn't bring the caret back. This is not reproducible with just any text field (e.g. the google.com text field).
Attachments
Test case (490 bytes, text/html)
2007-04-28 13:37 PDT, mitz
no flags
Avoid cutting off layers when removing an anonymous block (8.86 KB, patch)
2007-04-28 14:12 PDT, mitz
darin: review+
mitz
Comment 1 2007-04-26 08:28:29 PDT
For example, the bug doesn't happen with <div><input></div>.
mitz
Comment 2 2007-04-26 08:47:33 PDT
Darin Adler
Comment 3 2007-04-28 10:54:10 PDT
I ran into this too! It's been preventing me from working on some bugs!
Darin Adler
Comment 4 2007-04-28 10:55:47 PDT
mitz
Comment 5 2007-04-28 13:37:21 PDT
Created attachment 14247 [details] Test case This shows the root cause of the bug (which is not in editing or in form controls). The inner (green) div's layer gets lost due to the "!fullRemove/Insert/Append" shortcuts introduced in r21093.
mitz
Comment 6 2007-04-28 14:12:32 PDT
Created attachment 14248 [details] Avoid cutting off layers when removing an anonymous block
Darin Adler
Comment 7 2007-04-28 16:53:20 PDT
Comment on attachment 14248 [details] Avoid cutting off layers when removing an anonymous block r=me
Darin Adler
Comment 8 2007-04-28 18:56:55 PDT
Sending LayoutTests/ChangeLog Adding LayoutTests/fast/dynamic/anonymous-block-layer-lost-expected.checksum Adding (bin) LayoutTests/fast/dynamic/anonymous-block-layer-lost-expected.png Adding LayoutTests/fast/dynamic/anonymous-block-layer-lost-expected.txt Adding LayoutTests/fast/dynamic/anonymous-block-layer-lost.html Sending WebCore/ChangeLog Sending WebCore/rendering/RenderBlock.cpp Transmitting file data ....... Committed revision 21173.
Note You need to log in before you can comment on or make changes to this bug.