LayoutTests:

Reviewed by Darin.

        - test for http://bugs.webkit.org/show_bug.cgi?id=13501
          REGRESSION (r21093): Pasting into text field fails and makes the caret disappear

        * fast/dynamic/anonymous-block-layer-lost-expected.checksum: Added.
        * fast/dynamic/anonymous-block-layer-lost-expected.png: Added.
        * fast/dynamic/anonymous-block-layer-lost-expected.txt: Added.
        * fast/dynamic/anonymous-block-layer-lost.html: Added.

WebCore:

        Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13501
          REGRESSION (r21093): Pasting into text field fails and makes the caret disappear

        Test: fast/dynamic/anonymous-block-layer-lost.html

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::removeChild): Avoid cutting off layers when removing
        the anonymous block.



Canonical link: https://commits.webkit.org/17685@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21173 268f45cc-cd09-0410-ab3c-d52691b4dbfc